src/objects/c2g__codaBatchControl__c.object
<CustomObject>
    <description>Stores batch information to avoid running in parallel more than one batch process for the same records.</description>
    <fields>
        <fullName>c2g__BatchClass__c</fullName>
        <label>Batch Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BatchId__c</fullName>
        <label>Batch Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Batch Lock</label>
    <listViews>
        <fullName>c2g__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>c2g__BatchClass__c</columns>
        <columns>c2g__BatchId__c</columns>
        <columns>c2g__ExternalId__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BC{000000}</displayFormat>
        <label>Batch Lock Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Batch Locks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>